--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-    <section class="page-header">
-        <div class="page-header-overlay"></div>
+    <section class="page-header" style="background-image: linear-gradient(rgba(0,0,0,0.28), rgba(0,0,0,0.28)), url('images/Pic 6.jpeg'); background-size: cover; background-position: center;">
+        <div class="page-header-overlay" style="background: rgba(0,0,0,0.36);"></div>
         <div class="container">
             <h1>About KAKN Sites & Andrew Kizito</h1>
             <p>Educator, Researcher, and Technology Advocate</p>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="profile-grid">
                 <div class="profile-image">
-                    <img src="attached_assets/stock_images/professional_african_2dbececd.jpg" alt="Andrew Kizito - Professional Profile">
+                    <img src="images/Pic 2.JPG" alt="Andrew Kizito - Professional Profile">
                 </div>
                 <div class="profile-content">
                     <h2>Professional Background</h2>
@@ -195,7 +195,7 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="--cta-image: url('../images/Pexels 4.jpg')">
         <div class="container">
             <h2>Ready to Start Your ICT Journey?</h2>
             <p>Explore our comprehensive course designed for teachers and adults</p>
@@ -232,7 +232,7 @@
             </div>
             <div class="footer-bottom">
                 
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
