--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-    <section class="page-header">
-        <div class="page-header-overlay"></div>
+    <section class="page-header" style="background-image: linear-gradient(rgba(0,0,0,0.28), rgba(0,0,0,0.28)), url('images/Pexels 13.jpg'); background-size: cover; background-position: center;">
+        <div class="page-header-overlay" style="background: rgba(0,0,0,0.36);"></div>
         <div class="container">
             <h1>Get in Touch</h1>
             <p>We're here to help you start your ICT journey</p>
@@ -208,7 +208,7 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="--cta-image: url('../images/Pexels 14.jpg')">
         <div class="container">
             <h2>Ready to Get Started?</h2>
             <p>Enroll in our course today and transform your ICT skills</p>
@@ -245,7 +245,7 @@
             </div>
             <div class="footer-bottom">
                 
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
