--- a/testimonials.html
+++ b/testimonials.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-    <section class="page-header">
-        <div class="page-header-overlay"></div>
+    <section class="page-header" style="background-image: linear-gradient(rgba(0,0,0,0.28), rgba(0,0,0,0.28)), url('images/Pexels 11.jpg'); background-size: cover; background-position: center;">
+        <div class="page-header-overlay" style="background: rgba(0,0,0,0.36);"></div>
         <div class="container">
             <h1>Success Stories</h1>
             <p>Hear from our empowered learners</p>
@@ -81,13 +81,13 @@
                         </div>
                     </div>
                     <div class="testimonial-image-full">
-                        <img src="attached_assets/stock_images/teacher_using_comput_580136df.jpg" alt="Teacher in classroom">
+                        <img src="images/Pic 4.jpg" alt="Teacher in classroom">
                     </div>
                 </div>
 
                 <div class="testimonial-full-card reverse">
                     <div class="testimonial-image-full">
-                        <img src="attached_assets/stock_images/adults_learning_comp_a5299904.jpg" alt="NGO training">
+                        <img src="images/Pexels 12.jpg" alt="NGO training">
                     </div>
                     <div class="testimonial-content-full">
                         <div class="quote-icon">
@@ -212,7 +212,7 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="--cta-image: url('../images/Pic 5.jpg')">
         <div class="container">
             <h2>Join Our Community of Empowered Learners</h2>
             <p>Start your ICT journey today and transform your digital skills</p>
@@ -249,7 +249,7 @@
             </div>
             <div class="footer-bottom">
                 
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
