--- a/blog.html
+++ b/blog.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-    <section class="page-header">
-        <div class="page-header-overlay"></div>
+    <section class="page-header" style="background-image: linear-gradient(rgba(0,0,0,0.28), rgba(0,0,0,0.28)), url('images/Pexels 10.jpg'); background-size: cover; background-position: center;">
+        <div class="page-header-overlay" style="background: rgba(0,0,0,0.36);"></div>
         <div class="container">
             <h1>Blog</h1>
             <p>Latest insights, updates and stories from KAKN Sites</p>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
