--- a/course.html
+++ b/course.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-    <section class="page-header course-header">
-        <div class="page-header-overlay"></div>
+    <section class="page-header course-header" style="background-image: linear-gradient(rgba(0,0,0,0.28), rgba(0,0,0,0.28)), url('images/Pexels 2.jpg'); background-size: cover; background-position: center;">
+        <div class="page-header-overlay" style="background: rgba(0,0,0,0.36);"></div>
         <div class="container">
             <h1>Practical Computer Applications and ICT Integration</h1>
             <p>For Teachers and Adults</p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="course-sidebar">
                     <div class="course-info-card">
-                        <img src="attached_assets/stock_images/teacher_using_comput_580136df.jpg" alt="ICT Training">
+                        <img src="images/Pexels 6.jpg" alt="ICT Training">
                         <div class="pricing">
                             <div class="price-tag">
                                 <span class="currency">UGX 150,000</span>
@@ -315,7 +315,7 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="--cta-image: url('../images/Pexels 5.jpg')">
         <div class="container">
             <h2>Ready to Transform Your ICT Skills?</h2>
             <p>Enroll now and join hundreds of empowered learners</p>
@@ -352,7 +352,7 @@
             </div>
             <div class="footer-bottom">
                 
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
