--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     
 
-    <section class="hero">
+    <section class="hero" style="--hero-image: url('../images/Pexels 1.jpg')">
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="hero-title">Bridging Teachers and Communities with ICT</h1>
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="attached_assets/stock_images/professional_african_edfc2a91.jpg" alt="Andrew Kizito - ICT Educator">
+                    <img src="images/Pic 1.jpeg" alt="Andrew Kizito">
                 </div>
                 <div class="about-content">
                     <h2>About Andrew Kizito</h2>
@@ -143,7 +143,7 @@
                     <a href="course.html" class="btn btn-primary">View Course Details</a>
                 </div>
                 <div class="course-image">
-                    <img src="attached_assets/stock_images/adults_learning_comp_ad7e9aef.jpg" alt="ICT Training Workshop">
+                    <img src="images/Pexels 2.jpg" alt="ICT In Work">
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="--cta-image: url('../images/Pexels 3.jpg')">
         <div class="container">
             <h2>Ready to Build Your ICT Skills?</h2>
             <p>Join our training today and get certified!</p>
@@ -290,7 +290,7 @@
             </div>
             <div class="footer-bottom">
                 
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
