--- a/research.html
+++ b/research.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-    <section class="page-header">
-        <div class="page-header-overlay"></div>
+    <section class="page-header" style="background-image: linear-gradient(rgba(0,0,0,0.28), rgba(0,0,0,0.28)), url('images/Pexels 8.jpg'); background-size: cover; background-position: center;">
+        <div class="page-header-overlay" style="background: rgba(0,0,0,0.36);"></div>
         <div class="container">
             <h1>Research & Projects</h1>
             <p>Innovative Solutions and Research Initiatives</p>
@@ -60,7 +60,7 @@
             <div class="research-grid">
                 <div class="research-card featured">
                     <div class="research-image">
-                        <img src="attached_assets/stock_images/digital_learning_edu_eb36b3cb.jpg" alt="ICT Research">
+                        <img src="images/Pexels 7.jpg" alt="ICT Research">
                         <div class="research-badge">Ongoing Research</div>
                     </div>
                     <div class="research-content">
@@ -75,7 +75,7 @@
 
                 <div class="research-card">
                     <div class="research-image">
-                        <img src="attached_assets/stock_images/teacher_using_comput_322d5389.jpg" alt="NCDC Capacity Building">
+                        <img src="images/Pic 3.JPG" alt="NCDC Capacity Building">
                         <div class="research-badge">Research Study</div>
                     </div>
                     <div class="research-content">
@@ -216,7 +216,7 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="--cta-image: url('../images/Pexels 9.jpg')">
         <div class="container">
             <h2>Interested in Collaborating?</h2>
             <p>Let's work together on research, projects, or ICT integration initiatives</p>
@@ -253,7 +253,7 @@
             </div>
             <div class="footer-bottom">
                 
-                <p>&copy; 2025 KAKN Sites. All Rights Reserved.</p>
+                <p>&copy; 2026 KAKN Sites. All Rights Reserved.</p>
                 <p> Designed by <a href="https://envisageweb.netlify.app" class="envisage-link" target="_blank" rel="noopener noreferrer">Envisage</a> </p>
             </div>
         </div>
